wms-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: wms-deployment
  labels:
    app: wms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wms
  template:
    metadata:
      labels:
        app: wms
    spec:
      containers:
      - name: wms
        image: rhinock/wms:latest
        ports:
        - containerPort: 8080
