app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.service.type: LoadBalancer
    kompose.version: 1.24.0 (4a2a0458)
  # creationTimestamp: null
  labels:
    io.kompose.service: app-tcp
  name: app-tcp
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: app
  type: LoadBalancer
status:
  loadBalancer: {}
