postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service-nodeport
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
  - port: 5432
    # targetPort: <Target Port>
  selector:
    app: postgres
