wms-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wms-service-nodeport
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: wms
  type: NodePort
