front_net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  # creationTimestamp: null
  name: frontnet
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/frontnet: "true"
  podSelector:
    matchLabels:
      io.kompose.network/frontnet: "true"
